--- a/app/css/index.css
+++ b/app/css/index.css
@@ -18,3 +18,40 @@ body{
     align-items: center;
     justify-content: center;
 }
+p{font-size: 15px; color: #B0B1BC;font-weight: 400;    max-width: 90%;}
+h3{font-size: 22px; color: hwb(217 12% 68%);font-weight: 700;}
+.card{
+    width: 300px;
+    height: 480px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 5px 45px #b0b1bca9;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
+    padding: 20px 15px;
+}
+.card .qr-box{
+    width: 90%;
+    height: 250px;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.card .qr-box img{
+    width: 100%;
+    height: 100%;
+}
+
+.text-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 15px;
+
+}
